--- a/devStuff/styles.css
+++ b/devStuff/styles.css
@@ -1,8 +1,8 @@
 body {
     background-color: #f0f0f0;
     font-family: Arial, sans-serif;
-    padding: 0;
-    margin: 0;
+    
+    
 }
 .main-head{
     width: 96.9%;
@@ -50,3 +50,29 @@ body {
     color: white;
     padding: 10px;
 }
+
+
+h1{
+  color:#647383;
+}
+
+#joke{
+  background-color:brown;
+  height:40px;
+  width: 200px;
+  color:white;
+  border-radius:15px;
+  font-weight:bolder;
+  font-size:large;
+  border: 2px solid yellow;
+}
+
+#jokedisplay{
+  margin:20vh;
+  border:1px solid black;
+  padding:20px;
+  border-radius:5px;
+  background-color:#FFF4A4;
+}
+
+
